Integrate ImmutableMap and ImmutableSet objects.